feat: Add TypeScript environment definitions and update index.html to include index.tsx

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
         .custom-scrollbar::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
         .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #cbd5e1; }
-        
+
         /* Анимация пульсации для активных элементов */
         @keyframes subtle-pulse {
             0% { box-shadow: 0 0 0 0 rgba(99, 102, 241, 0.4); }
@@ -38,22 +38,9 @@
             animation: subtle-pulse 2s infinite;
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.463.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "canvas-confetti": "https://esm.sh/canvas-confetti@^1.9.4",
-    "framer-motion": "https://esm.sh/framer-motion@^11.11.1"
-  }
-}
-</script>
 </head>
 <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
